new project layout

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -85,7 +85,7 @@
     </div>
 </material-toolbar>
 
-<section layout="horizontal" layout-fill ng-controller="MainCtrl">
+<section layout="horizontal" layout-fill ng-controller="MainCtrl" style="padding-bottom:63px;">
     <div ng-if="leftNav"  style="height:100%;" class="sidenav-container">
         <material-sidenav class="material-sidenav-left material-whiteframe-z2" component-id="left" style="height:100%;">
             <div ng-controller="LeftNavCtrl" style="height:100%;">
