new challenges layout

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -89,7 +89,7 @@
     <div ng-if="leftNav"  style="height:100%;" class="sidenav-container">
         <material-sidenav class="material-sidenav-left material-whiteframe-z2" component-id="left" style="height:100%;">
             <div ng-controller="LeftNavCtrl" style="height:100%;">
-                <ng-include src="sideNavTemplateUrl" flex layout="vertical" layout-fill>
+                <ng-include src="sideNavTemplateUrl" flex layout="vertical" layout-fill style="padding-left: 15px;">
                 </ng-include>
             </div>
         </material-sidenav>
