--- a/client/app/modules/common/leftNav/publications.tpl.html
+++ b/client/app/modules/common/leftNav/publications.tpl.html
@@ -9,7 +9,7 @@
         <material-button ui-sref="workspace({ pid : project.accessUrl })">
             <i class='fa fa-cogs'>&nbsp;WorkSpace</i>
         </material-button>
-        <material-button ui-sref="projectAdmin({ pid : project._id })">
+        <material-button ui-sref="projectAdmin({ pid : project._id })" ng-if="isOwner">
             <i class='fa fa-cog'>&nbsp;Admin</i>
         </material-button>
     </div>
