--- a/client/app/index.html
+++ b/client/app/index.html
@@ -59,7 +59,7 @@
         </div>
         <div layout="horizontal" layout-align="start end" >
             <div style="cursor:pointer;"  ui-sref="challenges.list({ tag :'all' })" >
-                <material-icon icon="images/svg/challengesIn.svg">
+                <material-icon icon="images/svg/challenges.svg">
                 </material-icon>
             </div>
             <img src="images/plus.png" width="15%" height="15%" class="plus-icon" ui-sref="challengeSuggest" ng-if="currentUser._id" alt="add"/>
