--- a/client/app/index.html
+++ b/client/app/index.html
@@ -126,6 +126,9 @@
 <script src="vendors/angular-timer/dist/angular-timer.js"></script>
 <script src="vendors/satellizer/satellizer.js"></script>
 <script src="vendors/angular-timeago/src/timeAgo.js"></script>
+<script src="vendors/underscore/underscore.js"></script>
+
+<script src="env/config.js"></script>
 
 <script src="app.js"></script>
 
