To fix infinite loop, moved challenges from subview to main view

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -58,7 +58,7 @@
             </a>
         </div>
         <div layout="horizontal" layout-align="start end" >
-            <div style="cursor:pointer;"  ui-sref="challenges.list({ tag :'all' })" >
+            <div style="cursor:pointer;"  ui-sref="challengesList({ tag :'all' })" >
                 <material-icon icon="images/svg/challenges.svg">
                 </material-icon>
             </div>
@@ -198,7 +198,6 @@
 <script src="modules/profile/services.js"></script>
 <script src="modules/profile/directives/activity/directives.js"></script>
 <script src="modules/profile/directives/userBlock/directives.js"></script>
-
 
 <script src="modules/admin/profile/controller.js"></script>
 <script src="modules/admin/profile/route.js"></script>
