Fixed redirect to /login bug

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -39,7 +39,7 @@
         <material-toolbar layout="horizontal">
             <div class="material-toolbar-tools">
                 <div flex>
-                    <img src="images/notif.png" alt="notifications !"  ng-if="sideNavTemplateUrl == 'modules/header/templates/notifications.tpl.html'"/>
+                    <img src="images/svg/notification.svg" alt="notifications !"  ng-if="sideNavTemplateUrl == 'modules/header/templates/notifications.tpl.html'"/>
                     <img src="images/svg/login.svg" alt="notifications !"  ng-if="sideNavTemplateUrl == 'modules/auth/templates/signin.tpl.html'"/>
                 </div>
                 <i class="fa fa-caret-right fa-2x my-btn" style="color:black;" ng-click="toggleRight()"></i>
