--- a/client/app/index.html
+++ b/client/app/index.html
@@ -39,7 +39,7 @@
         <material-toolbar layout="horizontal">
             <div class="material-toolbar-tools">
                 <div flex>
-                    <img src="images/svg/notification.svg" alt="notifications !"  ng-if="sideNavTemplateUrl == 'modules/header/templates/notifications.tpl.html'"/>
+                    <img src="images/notif.png" alt="notifications !"  ng-if="sideNavTemplateUrl == 'modules/header/templates/notifications.tpl.html'"/>
                     <img src="images/svg/login.svg" alt="notifications !"  ng-if="sideNavTemplateUrl == 'modules/auth/templates/signin.tpl.html'"/>
                 </div>
                 <i class="fa fa-caret-right fa-2x my-btn" style="color:black;" ng-click="toggleRight()"></i>
@@ -58,7 +58,7 @@
             </a>
         </div>
         <div layout="horizontal" layout-align="start end" >
-            <div style="cursor:pointer;"  ui-sref="challengesList({ tag :'all' })" >
+            <div style="cursor:pointer;"  ui-sref="challenges.list({ tag :'all' })" >
                 <material-icon icon="images/svg/challenges.svg">
                 </material-icon>
             </div>
@@ -198,6 +198,7 @@
 <script src="modules/profile/services.js"></script>
 <script src="modules/profile/directives/activity/directives.js"></script>
 <script src="modules/profile/directives/userBlock/directives.js"></script>
+
 
 <script src="modules/admin/profile/controller.js"></script>
 <script src="modules/admin/profile/route.js"></script>
