--- a/client/app/modules/common/leftNav/publications.tpl.html
+++ b/client/app/modules/common/leftNav/publications.tpl.html
@@ -6,7 +6,7 @@
         <material-button ui-sref="project.trello({ pid : project.accessUrl })">
             <i class='fa fa-trello'>&nbsp;Trello</i>
         </material-button>
-        <material-button ui-sref="workspace({ pid : project.accessUrl })">
+        <material-button ui-sref="workspace.note({ pid : project.accessUrl })">
             <i class='fa fa-cogs'>&nbsp;WorkSpace</i>
         </material-button>
         <material-button ui-sref="projectAdmin({ pid : project._id })" ng-if="isOwner">
