--- a/client/app/index.html
+++ b/client/app/index.html
@@ -129,6 +129,8 @@
     <script src="vendors/satellizer/satellizer.js"></script>
     <script src="vendors/angular-timeago/src/timeAgo.js"></script>
     <script src="vendors/underscore/underscore.js"></script>
+    <script src="vendors/angulartics/src/angulartics.js"></script>
+    <script src="vendors/angulartics/src/angulartics-ga.js"></script>
 
     <script src="env/config.js"></script>
 
@@ -219,17 +221,12 @@
     <!-- endbuild -->
 
     <script type="text/javascript">
-        // google analystic
-        var _gaq = _gaq || [];
-        /* // only for production
-         _gaq.push(['_setAccount', 'UA-41577560-1']);
-         _gaq.push(['_trackPageview']);
-         (function() {
-         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-         })();
-         */
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-36688753-3', 'auto');
     </script>
 </body>
 </html>
