Moved links to project pge to project home page

--- a/client/app/modules/profile/directives/activity/follow-activity.tpl.html
+++ b/client/app/modules/profile/directives/activity/follow-activity.tpl.html
@@ -8,7 +8,7 @@
     <span>{{ entity.title }}</span>
 </article>
 
-<article class="center"  ng-if="type=='projects'" style="height:70px;cursor:pointer;" ui-sref="project({ pid : project.accessUrl })">
+<article class="center"  ng-if="type=='projects'" style="height:70px;cursor:pointer;" ui-sref="project.home({ pid : project.accessUrl })">
     {{ message }}
     <span>{{ entity.title }}</span>
 </article>
