--- a/client/app/modules/project/directives/projectBlock/project-info.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-info.tpl.html
@@ -1,11 +1,3 @@
-<!--<div layout="horizontal" >-->
-    <!--<div>-->
-        <!--<img ng-src="" alt="" class="item-info-img"/>-->
-    <!--</div>-->
-    <!--<div layout-align="center center" layout="horizontal">-->
-        <!--<material-button flex></material-button>-->
-    <!--</div>-->
-<!--</div>-->
-<material-button ui-sref="project({ pid : project.accessUrl })">
+<material-button ui-sref="project.home({ pid : project.accessUrl })">
     {{ project.title }}
 </material-button>
