--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,8 +12,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <base href="/"/>
-    <link rel="stylesheet" href="//code.cdn.mozilla.net/fonts/fira.css">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
+    <link rel="stylesheet" href="styles/fira.css">
+    <link rel="stylesheet" href="styles/selectize.default.css">
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="vendors/Font-Awesome/css/font-awesome.css">
     <link rel="stylesheet" href="vendors/font-awesome-animation/dist/font-awesome-animation.css"/>
