--- a/client/app/modules/challenge/directives/challengeBlock/challenge-block.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-block.tpl.html
@@ -1,5 +1,5 @@
 <div class="item-block-container" ng-mouseenter="hoverEnter($event)" ng-mouseleave="hoverLeave($event)" ui-sref="challenge({ pid : challenge.accessUrl })">
-    <img ng-src="{{ challenge.poster || 'http://placehold.it/100x100' }}" width="100%" alt="" class="img-rounded"/>
+    <img ng-src="{{ challenge.poster || '/images/placeholder100x100.png' }}" width="100%" alt="" class="img-rounded"/>
     <!--<div style="text-align: center;" ng-if="block.isHovered">-->
         <!--{{challenge.title}}-->
     <!--</div>-->
