--- a/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
@@ -1,5 +1,5 @@
 <material-card layout="vertical"  class="challenge-card">
-    <img ng-src="{{challenge.poster || 'http://placehold.it/100x100'}}" alt="..." class="material-card-image">
+    <img ng-src="{{challenge.poster || '/images/placeholder100x100.png'}}" alt="..." class="material-card-image">
     <material-button ng-if="admin && isHovered" ui-sref="challengeAdmin({ cid : challenge._id })">
         <i class="fa fa-gears"></i>
         Admin
