--- a/client/app/modules/profile/directives/userBlock/user-block.tpl.html
+++ b/client/app/modules/profile/directives/userBlock/user-block.tpl.html
@@ -1,5 +1,5 @@
 <div class="item-block-container" ng-mouseenter="hoverEnter($event)" ng-mouseleave="hoverLeave($event)" ui-sref="profile({ uid : user._id })" style="margin:0px!important">
-    <img ng-src="{{ user.poster || 'http://placehold.it/100x100' }}" ng-style="{}" width="100%" alt="" style="border-radius: 50%;"/>
+    <img ng-src="{{ user.poster || '/images/placeholder100x100.png' }}" ng-style="{}" width="100%" alt="" style="border-radius: 50%;"/>
     <!--<div ng-if="block.isHovered" style="text-align: center;">-->
         <!--{{user.realname || user.username}}-->
     <!--</div>-->
