--- a/client/app/modules/profile/directives/userBlock/user-card.tpl.html
+++ b/client/app/modules/profile/directives/userBlock/user-card.tpl.html
@@ -1,5 +1,5 @@
 <material-card style="position:relative;">
-    <img ng-src="{{user.poster || 'http://placehold.it/300x300'}}" alt="..." class="material-card-image">
+    <img ng-src="{{user.poster || '/images/placeholder300x300.png'}}" alt="..." class="material-card-image">
 
     <material-button class="material-button-fab" style="position:absolute;top : -30px; right: -24px;" ng-click="banUser(user)">
         <i class="fa fa-times fa-2x" style="width: 24px; height: 24px;"></i>
