--- a/client/app/modules/project/directives/projectBlock/project-block.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-block.tpl.html
@@ -1,5 +1,5 @@
 <div class="item-block-container" ng-mouseenter="hoverEnter($event)" ng-mouseleave="hoverLeave($event)" ui-sref="project.home({ pid : project.accessUrl })">
-    <img ng-src="{{ project.poster || 'http://placehold.it/100x100' }}" alt=""/>
+    <img ng-src="{{ project.poster || '/images/placeholder100x100.png' }}" alt=""/>
     <div ng-if="isHovered" style="text-align: center;">
         {{project.title}}
     </div>
