Refactored notes to own module

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -216,6 +216,8 @@
     <script src="modules/message/controller.js"></script>
     <script src="modules/message/route.js"></script>
     <script src="modules/message/service.js"></script>
+
+    <script src="modules/notes/directives.js"></script>
     <!-- endbuild -->
 
     <script type="text/javascript">
