Continued refactoring of notes module

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -218,6 +218,7 @@
     <script src="modules/message/service.js"></script>
 
     <script src="modules/notes/directives.js"></script>
+    <script src="modules/notes/services.js"></script>
     <!-- endbuild -->
 
     <script type="text/javascript">
