--- a/client/app/modules/common/leftNav/publications.tpl.html
+++ b/client/app/modules/common/leftNav/publications.tpl.html
@@ -6,13 +6,14 @@
         <material-button ui-sref="project.trello({ pid : project.accessUrl })">
             <i class='fa fa-trello'>&nbsp;Trello</i>
         </material-button>
-        <material-button ui-sref="workspace.note({ pid : project.accessUrl })">
+        <material-button ui-sref="workspace({ pid : project.accessUrl })">
             <i class='fa fa-cogs'>&nbsp;WorkSpace</i>
         </material-button>
         <material-button ui-sref="projectAdmin({ pid : project._id })" ng-if="isOwner">
             <i class='fa fa-cog'>&nbsp;Admin</i>
         </material-button>
     </div>
+    <!--
     <div ng-if="recommandedUsers.length > 0">
         <h3>
             <i class="fa fa-users">Talk with :</i>
@@ -29,19 +30,5 @@
             <project-block ng-repeat="project in recommandedProjects" my-project="project" width="'50px'" height="'50px'"></project-block>
         </div>
     </div>
+    -->
 </material-toolbar>
-<h2>Publication</h2>
-<material-content>
-    <material-list>
-        <material-item ng-repeat="publication in publications">
-            <material-item-content>
-                <div class="material-tile-left">
-                    <user-block user_id="publication.owner" height="'50px'" width="'50px'"></user-block>
-                </div>
-                <div class="material-tile-content" style="cursor:pointer;">
-                    {{ publication.title }}
-                </div>
-            </material-item-content>
-        </material-item>
-    </material-list>
-</material-content>
