WIP: Added rocket icon

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -43,16 +43,26 @@
                     </a>
                 </div>
                 <div layout="horizontal" layout-align="start end" >
-                    <div style="cursor:pointer;"  ui-sref="challenges.list({ tag :'all' })" >
-                        <material-icon icon="images/svg/challenges.svg">
-                        </material-icon>
-                    </div>
-                    <img src="images/add.png" width="10%" height="10%" class="plus-icon" ui-sref="challengeSuggest" ng-if="currentUser._id" alt="add"/>
-                    <div style="cursor:pointer;"  ui-route="/projects/all"  ng-class="{'menu-active': $uiRoute}"  ui-sref="projects.list({ tag :'all' })">
-                        <material-icon icon="images/svg/projects.svg"  >
-                        </material-icon>
-                    </div>
-                    <img src="images/add.png" width="10%" height="10%" class="plus-icon" ui-sref="projectCreation" ng-if="currentUser._id" alt="add"/>
+                    <a ui-sref="ideas.list({ tag :'all' })" class="top-bar-icon">
+                        <material-icon icon="images/svg/projects.svg"></material-icon>
+                    </a>
+                    <a ui-sref="ideaCreation" ng-if="currentUser._id">
+                        <img src="images/add.png" class="add-icon"/>
+                    </a>
+
+                    <a ui-sref="challenges.list({ tag :'all' })" class="top-bar-icon">
+                        <material-icon icon="images/svg/challenges.svg"></material-icon>
+                    </a>
+                    <a ui-sref="challengeSuggest" ng-if="currentUser._id">
+                        <img src="images/add.png" class="add-icon"/>
+                    </a>
+
+                    <a ui-sref="projects.list({ tag :'all' })" class="top-bar-icon">
+                        <i class="fa fa-rocket idea-icon"></i>
+                    </a>
+                    <a ui-sref="projectCreation" ng-if="currentUser._id">
+                        <img src="images/add.png" class="add-icon"/>
+                    </a>
                 </div>
                <search-bar hide block-md flex></search-bar>
                 <div hide-md flex style="text-align: center">
