Etherpad working in subdirectory

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -139,6 +139,7 @@
     <script src="vendors/satellizer/satellizer.js"></script>
     <script src="vendors/angular-timeago/src/timeAgo.js"></script>
     <script src="vendors/underscore/underscore.js"></script>
+    <script src="vendors/angular-cookies/angular-cookies.js"></script>
 
     <script src="env/config.js"></script>
 
