--- a/client/app/index.html
+++ b/client/app/index.html
@@ -159,7 +159,7 @@
     <script src="modules/d3/directives/tagGraph.js"></script>
     <script src="modules/d3/directives/tagCloud.js"></script>
 
-    <script src="modules/hackpad/hackpad.js"></script>
+    <script src="modules/etherpad/etherpad.js"></script>
 
     <script src="modules/notification/notification.js"></script>
 
