Projects and challenges show ideas

--- a/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-card.tpl.html
@@ -4,7 +4,7 @@
         <i class="fa fa-gears"></i>
         Admin
     </material-button>
-    <h4 ui-sref="challenge({ pid : challenge.accessUrl })">{{ challenge.title }}</h4>
+    <h4 ui-sref="challenge({ cid : challenge.accessUrl })">{{ challenge.title }}</h4>
     <div layout="vertical" >
         <div class="text-muted" layout="horizontal" >
             <div>
