--- a/client/app/index.html
+++ b/client/app/index.html
@@ -230,8 +230,9 @@
     <script src="modules/notes/services.js"></script>
 
     <script src="modules/idea/controller.js"></script>
-    <script src="modules/idea/route.js"></script>    
-    <script src="modules/idea/services.js"></script>    
+    <script src="modules/idea/route.js"></script>
+    <script src="modules/idea/services.js"></script>
+    <script src="modules/idea/directives/ideaCard/directives.js"></script>
     <!-- endbuild -->
 
     <script type="text/javascript">
