Notifications for logged-in user

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -162,6 +162,7 @@
     <script src="modules/etherpad/etherpad.js"></script>
 
     <script src="modules/notification/notification.js"></script>
+    <script src="modules/notification/notificationList/directives.js"></script>
 
     <script src="modules/files/services.js"></script>
     <script src="modules/files/directives/googledocPreview.js"></script>
