delete the last trace of rightNav

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -47,6 +47,9 @@
                         <material-icon icon="images/svg/ideas.svg"></material-icon>
                     </a>
                     <a ui-sref="createIdea" ng-if="currentUser._id">
+                        <div>
+                            Refresh
+                        </div>
                         <img src="images/add.png" class="add-icon"/>
                     </a>
 
