--- a/client/app/index.html
+++ b/client/app/index.html
@@ -45,6 +45,7 @@
                 <div layout="horizontal" layout-align="start end" >
                     <a ui-sref="ideas({ tag :'all' })" class="top-bar-icon">
                         <material-icon icon="images/svg/ideas.svg"></material-icon>
+                        <div class="tooltip-topbar-icon">ideas</div>
                     </a>
                     <a ui-sref="createIdea" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
@@ -52,6 +53,7 @@
 
                     <a ui-sref="challenges.list({ tag :'all' })" class="top-bar-icon">
                         <material-icon icon="images/svg/challenges.svg"></material-icon>
+                        <div class="tooltip-topbar-icon">challenges</div>
                     </a>
                     <a ui-sref="challengeSuggest" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
@@ -59,6 +61,7 @@
 
                     <a ui-sref="projects.list({ tag :'all' })" class="top-bar-icon">
                         <i class="fa fa-rocket idea-icon"></i>
+                        <div class="tooltip-topbar-icon">projects</div>
                     </a>
                     <a ui-sref="projectCreation" ng-if="currentUser._id">
                         <img src="images/add.png" class="add-icon"/>
