--- a/client/app/modules/challenge/directives/challengeBlock/challenge-info.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-info.tpl.html
@@ -1,1 +1,1 @@
-<material-button ui-sref="challenge({ cid : challenge.accessUrl })">{{challenge.title}}</material-button>
+<md-button ui-sref="challenge({ cid : challenge.accessUrl })">{{challenge.title}}</md-button>
