--- a/client/app/modules/idea/directives/ideaInfo/idea-info.tpl.html
+++ b/client/app/modules/idea/directives/ideaInfo/idea-info.tpl.html
@@ -1,3 +1,3 @@
-<material-button ui-sref="idea({ iid : idea._id })">
+<md-button ui-sref="idea({ iid : idea._id })">
     {{ idea.title }}
-</material-button>
+</md-button>
