--- a/client/app/modules/notification/notificationList/notification-list.tpl.html
+++ b/client/app/modules/notification/notificationList/notification-list.tpl.html
@@ -1,5 +1,5 @@
-<material-list>
+<md-list>
     <div ng-repeat="notif in notifications">
         <notification notification="notif"></notification>
     </div>
-</material-list>
+</md-list>
