--- a/client/app/modules/common/leftNav/admin-challenges.tpl.html
+++ b/client/app/modules/common/leftNav/admin-challenges.tpl.html
@@ -1,29 +1,29 @@
 <div ng-controller="ChallengeAdminLeftCtrl">
-    <material-toolbar layout="horizontal">
-        <div class="material-toolbar-tools">
+    <md-toolbar layout="horizontal">
+        <div class="md-toolbar-tools">
             <i class="fa fa-caret-left fa-2x my-btn" hide-md style="color:black;" ng-click="toggle()" flex></i>
             <div>
                 <i class="fa fa-trophy"> Settings</i>
             </div>
         </div>
-    </material-toolbar>
-    <material-content>
+    </md-toolbar>
+    <md-content>
         <section layout="vertical" flex-md>
-            <material-button ui-sref="challenge({ cid : challenge.accessUrl })" class="material-theme-indigo">
+            <md-button ui-sref="challenge({ cid : challenge.accessUrl })" class="md-theme-indigo">
                 View Challenge
-            </material-button>
-            <material-button ng-click="popUpPoster($event)" class="material-button-raised">
+            </md-button>
+            <md-button ng-click="popUpPoster($event)" class="md-button-raised">
                 Edit Poster
-            </material-button>
-            <material-button class="material-button-raised" style="width:100%;" ng-click="popUpBanner()">
+            </md-button>
+            <md-button class="md-button-raised" style="width:100%;" ng-click="popUpBanner()">
                 Edit Banner
-            </material-button>
-            <material-button class="material-button-raised"  style="width:100%;" ng-click="popUpEdit()">
+            </md-button>
+            <md-button class="md-button-raised"  style="width:100%;" ng-click="popUpEdit()">
                 Edit Home Page
-            </material-button>
-            <material-button class="material-button-colored material-theme-red" style="width:100%;" ng-click="popUpRemove()">
+            </md-button>
+            <md-button class="md-button-colored md-theme-red" style="width:100%;" ng-click="popUpRemove()">
                 Delete Challenge
-            </material-button>
+            </md-button>
         </section>
-    </material-content>
+    </md-content>
 </div>
