--- a/client/app/modules/common/leftNav/publications.tpl.html
+++ b/client/app/modules/common/leftNav/publications.tpl.html
@@ -1,16 +1,16 @@
-<material-toolbar>
+<md-toolbar>
     <div ng-if="isMember" layout="vertical">
-        <material-button ui-sref="project.home({ pid : project.accessUrl })">
+        <md-button ui-sref="project.home({ pid : project.accessUrl })">
             <i class='fa fa-home' inline-block style="text-align: right; width: 100%;">&nbsp;Home</i>
-        </material-button>
-        <material-button ui-sref="project.trello({ pid : project.accessUrl })">
+        </md-button>
+        <md-button ui-sref="project.trello({ pid : project.accessUrl })">
             <i class='fa fa-trello'>&nbsp;Trello</i>
-        </material-button>
-        <material-button ui-sref="workspace({ pid : project.accessUrl })">
+        </md-button>
+        <md-button ui-sref="workspace({ pid : project.accessUrl })">
             <i class='fa fa-cogs'>&nbsp;WorkSpace</i>
-        </material-button>
-        <material-button ui-sref="project.admin({ pid : project.accessUrl })" ng-if="isOwner">
+        </md-button>
+        <md-button ui-sref="project.admin({ pid : project.accessUrl })" ng-if="isOwner">
             <i class='fa fa-cog'>&nbsp;Admin</i>
-        </material-button>
+        </md-button>
     </div>
-</material-toolbar>
+</md-toolbar>
