--- a/client/app/modules/common/leftNav/tags-projects.tpl.html
+++ b/client/app/modules/common/leftNav/tags-projects.tpl.html
@@ -1,18 +1,18 @@
-<material-toolbar>
-    <div class="material-toolbar-tools">
+<md-toolbar>
+    <div class="md-toolbar-tools">
         <div flex hide-md>
-            <material-button class="material-button-fab"   ng-click="toggle()">
+            <md-button class="md-button-fab"   ng-click="toggle()">
                 <i class="fa fa-angle-left fa-2x"  style="color:black;" ></i>
-            </material-button>
+            </md-button>
         </div>
         <div>
             <i class="fa fa-tags"> Tags</i>
         </div>
     </div>
-</material-toolbar>
-<material-content>
-    <material-button style="width:100%;text-align:right;" ui-route="/projects/all" ng-class="{ 'material-button-raised' : $uiRoute }"  ui-sref="projects.list({ tag : 'all' })">ALL</material-button>
+</md-toolbar>
+<md-content>
+    <md-button style="width:100%;text-align:right;" ui-route="/projects/all" ng-class="{ 'md-button-raised' : $uiRoute }"  ui-sref="projects.list({ tag : 'all' })">ALL</md-button>
     <div ng-repeat="tag in tags">
-        <material-button style="width:100%;text-align:right;" ui-route="/projects/{{tag.title}}" ng-class="{ 'material-button-raised' : $uiRoute }"  ui-sref="projects.list({ tag : tag.title })">{{tag.title}}</material-button>
+        <md-button style="width:100%;text-align:right;" ui-route="/projects/{{tag.title}}" ng-class="{ 'md-button-raised' : $uiRoute }"  ui-sref="projects.list({ tag : tag.title })">{{tag.title}}</md-button>
     </div>
-</material-content>
+</md-content>
