--- a/client/app/modules/profile/directives/userBlock/user-info.tpl.html
+++ b/client/app/modules/profile/directives/userBlock/user-info.tpl.html
@@ -1,3 +1,3 @@
-<material-button ui-sref="profile({ uid : user._id })" style="width:100%;">
+<md-button ui-sref="profile({ uid : user._id })" style="width:100%;">
     {{ user.username }}
-</material-button>
+</md-button>
