--- a/client/app/modules/project/directives/projectBlock/project-card.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-card.tpl.html
@@ -1,11 +1,11 @@
-<material-card class="challenge-card">
+<md-card class="challenge-card">
     <a ui-sref="project.home({ pid : project.accessUrl })">
-        <img ng-src="{{project.poster || '/images/placeholder100x100.png'}}" alt="..." class="material-card-image">
+        <img ng-src="{{project.poster || '/images/placeholder100x100.png'}}" alt="..." class="md-card-image">
     </a>
-    <material-button ng-if="admin && isHovered" ui-sref="projectAdmin({ pid : project._id })">
+    <md-button ng-if="admin && isHovered" ui-sref="projectAdmin({ pid : project._id })">
         <i class="fa fa-gears"></i>
         Admin
-    </material-button>
+    </md-button>
     <a ui-sref="project.home({ pid : project.accessUrl })">
         <h4>{{ project.title }}</h4>
     </a>
@@ -39,4 +39,4 @@
             </span>
         </div>
     </div>
-</material-card>
+</md-card>
