--- a/client/app/modules/project/directives/projectBlock/project-info.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-info.tpl.html
@@ -1,3 +1,3 @@
-<material-button ui-sref="project.home({ pid : project.accessUrl })">
+<md-button ui-sref="project.home({ pid : project.accessUrl })">
     {{ project.title }}
-</material-button>
+</md-button>
