--- a/client/app/modules/common/leftNav/publications.tpl.html
+++ b/client/app/modules/common/leftNav/publications.tpl.html
@@ -1,5 +1,5 @@
 <md-toolbar>
-    <div ng-if="isMember" layout="vertical">
+    <div ng-if="isMember" layout="column">
         <md-button ui-sref="project.home({ pid : project.accessUrl })">
             <i class='fa fa-home' inline-block style="text-align: right; width: 100%;">&nbsp;Home</i>
         </md-button>
