--- a/client/app/modules/profile/directives/userBlock/user-card.tpl.html
+++ b/client/app/modules/profile/directives/userBlock/user-card.tpl.html
@@ -6,7 +6,7 @@
     </md-button>
     <p ng-bind-html="user.brief" style="max-height:200px;overflow:hidden;"></p>
     <showtags entity="user"></showtags>
-    <div layout="vertical">
+    <div layout="column">
         <div flex class="text-muted">
             {{ user.followers.length }} Followers
         </div>
