--- a/client/app/index.html
+++ b/client/app/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 </head>
-<body layout="horizontal" layout-fill ng-controller="BodyCtrl">
+<body layout="row" layout-fill ng-controller="BodyCtrl">
 <!--[if lt IE 10]>
       <p class="alert alert-warning">For better user experience,please use one of these browers :
     <a href="http://www.google.com/chrome/" target="_blank">Google Chrome</a>
@@ -34,17 +34,15 @@
       </p>
 <![endif]-->
 
-    <div layout="vertical" layout-fill>
+    <div layout="column" layout-fill>
         <md-toolbar ng-controller="HeaderCtrl" class="main-header">
             <div class="md-toolbar-tools">
-                <div hide block-md>
-                    <a style="cursor : pointer;padding-top: 0px;"  ui-sref="home">
-                        <img src="images/svg/logoheader.svg" height="50px" alt="IdeaWeaves"/>
-                    </a>
-                </div>
-                <div layout="horizontal" layout-align="start end" >
+                <a ui-sref="home">
+                    <img src="images/svg/logoheader.svg" height="50px" alt="IdeaWeaves"/>
+                </a>
+                <div layout="row" layout-align="start end" >
                     <a ui-sref="ideas({ tag :'all' })" class="top-bar-icon">
-                        <md-icon icon="images/svg/ideas.svg"></md-icon>
+                        <md-icon md-svg-src="images/svg/ideas.svg"></md-icon>
                         <div class="tooltip-topbar-icon">ideas</div>
                     </a>
                     <a ui-sref="createIdea" ng-if="currentUser._id">
@@ -52,7 +50,7 @@
                     </a>
 
                     <a ui-sref="challenges.list({ tag :'all' })" class="top-bar-icon">
-                        <md-icon icon="images/svg/challenges.svg"></md-icon>
+                        <md-icon md-svg-src="images/svg/challenges.svg"></md-icon>
                         <div class="tooltip-topbar-icon">challenges</div>
                     </a>
                     <a ui-sref="challengeSuggest" ng-if="currentUser._id">
@@ -67,40 +65,35 @@
                         <img src="images/add.png" class="add-icon"/>
                     </a>
                 </div>
-               <search-bar hide block-md flex></search-bar>
-               <md-button ui-sref="signin" class="md-button-raised" ng-if="!currentUser">
+                <search-bar flex></search-bar>
+                <md-button ui-sref="signin" class="md-raised md-primary" ng-if="!currentUser">
                     <i class="fa fa-sign-in"> Sign In</i>
                 </md-button>
-                <md-button ui-sref="profile({ uid : currentUser._id })" class="cursor-hand" id="miniProfil" ng-if="currentUser">
-                    <div div layout="horizontal" layout-align="center center">
+                <md-button ui-sref="profile({ uid : currentUser._id })" class="cursor-hand md-primary" id="miniProfil" ng-if="currentUser">
+                    <div div layout="row" layout-align="center center">
                         <img ng-src="{{ currentUser.poster || 'images/avater.jpg' }}" alt="{{ currentUser.username }}'s photo" class="img-rounded"/>
                         <p> {{ currentUser.realname || currentUser.username }}</p>
                     </div>
                 </md-button>
-                <md-button ui-sref="feed" ng-if="currentUser">
+                <md-button ui-sref="feed" ng-if="currentUser" class="md-primary">
                     <i class="fa fa-flag"></i>
                 </md-button>
-                <md-button ng-if="currentUser" id="signout" class="md-button-raised md-theme-red" ng-click="signout()" >
+                <md-button ng-if="currentUser" id="signout" class="md-raised md-warn" ng-click="signout()" >
                     <i class="fa fa-sign-out">Signout</i>
                 </md-button>
-                <div hide-md flex style="text-align: center">
-                    <a style="cursor : pointer;padding-top: 0px;"  ui-sref="home">
-                        <img src="images/svg/logoheader.svg" height="50px" alt="IdeaWeaves"/>
-                    </a>
-                </div>
             </div>
         </md-toolbar>
 
-        <section layout="horizontal" layout-fill ng-controller="LeftNavCtrl" style="padding-bottom:63px;">
+        <section layout="row" layout-fill ng-controller="LeftNavCtrl" style="padding-bottom:63px;">
             <div ng-show="sideNavTemplateUrl" style="height:100%;" class="sidenav-container">
                 <md-sidenav class="md-sidenav-left md-whiteframe-z2" component-id="left" style="height:100%;">
                     <div style="height:100%;">
-                        <ng-include src="sideNavTemplateUrl" flex layout="vertical" layout-fill style="padding-left: 15px;">
+                        <ng-include src="sideNavTemplateUrl" flex layout="column" layout-fill style="padding-left: 15px;">
                         </ng-include>
                     </div>
                 </md-sidenav>
             </div>
-            <section ui-view="mainView" layout="vertical" layout-fill class="right-part"></section>
+            <section ui-view="mainView" layout="column" layout-fill class="right-part"></section>
         </section>
     </div>
 
