--- a/client/app/modules/common/leftNav/tags-projects.tpl.html
+++ b/client/app/modules/common/leftNav/tags-projects.tpl.html
@@ -11,8 +11,8 @@
     </div>
 </md-toolbar>
 <md-content>
-    <md-button style="width:100%;text-align:right;" ui-route="/projects/all" ng-class="{ 'md-button-raised' : $uiRoute }"  ui-sref="projects.list({ tag : 'all' })">ALL</md-button>
+    <md-button style="width:100%;text-align:right;" ui-route="/projects/all" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="projects.list({ tag : 'all' })">ALL</md-button>
     <div ng-repeat="tag in tags">
-        <md-button style="width:100%;text-align:right;" ui-route="/projects/{{tag.title}}" ng-class="{ 'md-button-raised' : $uiRoute }"  ui-sref="projects.list({ tag : tag.title })">{{tag.title}}</md-button>
+        <md-button style="width:100%;text-align:right;" ui-route="/projects/{{tag.title}}" ng-class="{ 'md-raised' : $uiRoute }"  ui-sref="projects.list({ tag : tag.title })">{{tag.title}}</md-button>
     </div>
 </md-content>
