--- a/client/app/modules/idea/directives/ideaCard/idea-card.tpl.html
+++ b/client/app/modules/idea/directives/ideaCard/idea-card.tpl.html
@@ -2,7 +2,7 @@
     <a ui-sref="idea({ iid : idea._id })">
         <h4>{{ idea.title }}</h4>
     </a>
-    <div class="text-muted" layout="horizontal">
+    <div class="text-muted" layout="row">
         <div>
             By:
         </div>
@@ -12,8 +12,8 @@
     </div> 
     <p class="text-muted" ng-bind="idea.brief" style="max-height:200px;overflow:hidden;" ></p>
     <showtags entity="idea"></showtags>
-    <div layout="horizontal">
-        <div flex layout="horizontal" class="text-muted">
+    <div layout="row">
+        <div flex layout="row" class="text-muted">
             <span>
                 {{ idea.followers.length }}
             </span>
