--- a/client/app/modules/profile/directives/userBlock/user-block.tpl.html
+++ b/client/app/modules/profile/directives/userBlock/user-block.tpl.html
@@ -3,7 +3,7 @@
     <div ng-if="block.isHovered" style="text-align: center;">
         {{user.realname || user.username}}
     </div>
-    <!--<div class="item-block center" ng-if="block.isHovered" ng-style="{ height : blockHeight}" style="border-radius: 50%; font-size:1em;" layout="vertical" layout-align="center center">-->
+    <!--<div class="item-block center" ng-if="block.isHovered" ng-style="{ height : blockHeight}" style="border-radius: 50%; font-size:1em;" layout="column" layout-align="center center">-->
         <!--<span style="font-size:1em;" class="center" >-->
             <!--{{user.realname || user.username}}-->
         <!--</span>-->
