--- a/client/app/modules/project/directives/projectBlock/project-card.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-card.tpl.html
@@ -9,7 +9,7 @@
     <a ui-sref="project.home({ pid : project.accessUrl })">
         <h4>{{ project.title }}</h4>
     </a>
-    <div class="text-muted" layout="horizontal">
+    <div class="text-muted" layout="row">
         <div>
             By :
         </div>
@@ -17,8 +17,8 @@
     </div>
     <p class="text-muted" ng-bind="project.brief" style="max-height:200px;overflow:hidden;" ></p>
     <showtags entity="project"></showtags>
-    <div layout="horizontal">
-        <div flex layout="horizontal" class="text-muted">
+    <div layout="row">
+        <div flex layout="row" class="text-muted">
             <span>
                 {{ project.followers.length }}
             </span>
@@ -29,7 +29,7 @@
         </div>
         &nbsp;
         &nbsp;
-        <div flex layout="horizontal" class="text-muted">
+        <div flex layout="row" class="text-muted">
             <span>
                 {{ project.members.length }}
             </span>
