fixed register form

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -84,7 +84,7 @@
             </div>
         </md-toolbar>
 
-        <section layout="row" layout-fill ng-controller="LeftNavCtrl" style="padding-bottom:63px;">
+        <section layout="row" layout-fill ng-controller="LeftNavCtrl">
             <div ng-show="sideNavTemplateUrl" style="height:100%;" class="sidenav-container">
                 <md-sidenav class="md-sidenav-left md-whiteframe-z2" component-id="left" style="height:100%;">
                     <div style="height:100%;">
